Bug 20091 - Breakpoints in @plt routines are almost never useful
Summary: Breakpoints in @plt routines are almost never useful
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: c++ (show other bugs)
Version: 7.11.1
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-13 15:58 UTC by Richard Shapiro
Modified: 2023-02-12 06:24 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Shapiro 2016-05-13 15:58:03 UTC
I'm debugging in a large system with many shared libraries. If I set a breakpoint in zap::thing, I get a breakpoint in zap::thing@plt and zap::thing. The former is almost never interesting (at least to me as an application developer; maybe as a compiler writer I would care more). So, I would like a way to turn this off. 

I will observe that there is code in bfd/bfd.c to cause c++ demangling to match 
zap::thing@plt

 /* Strip off @plt and suchlike too.  */
  alloc = NULL;
  suf = strchr (name, '@');
  if (suf != NULL)
    {
      alloc = (char *) bfd_malloc (suf - name + 1);
      if (alloc == NULL)
	return NULL;
      memcpy (alloc, name, suf - name);
      alloc[suf - name] = '\0';
      name = alloc;
    }


setting suf to NULL is sufficient to suppress the spurious breakpoints. It would be nice if this could be controlled with an option.
Comment 1 Vadim Zeitlin 2023-01-10 01:34:34 UTC
It would be great if this could be implemented, especially because it seems simple to do it. Would a patch adding an option such as proposed in the first comment above be accepted?

The existing workarounds listed e.g. at https://stackoverflow.com/questions/28243549/prevent-plt-procedure-linkage-table-breakpoints-in-gdb are quite unsatisfactory.
Comment 2 Andrew Burgess 2023-01-30 10:51:08 UTC
I posted a fix for this issue to the mailing list here:

  https://sourceware.org/pipermail/gdb-patches/2022-December/194950.html

And an update here:

  https://sourceware.org/pipermail/gdb-patches/2023-January/195979.html

Any testing of this patch, and feedback on the list would be great.
Comment 3 Sourceware Commits 2023-02-12 06:21:24 UTC
The master branch has been updated by Andrew Burgess <aburgess@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=f0bdf68d3fb6db1dd2b83e07062e2104cdb785c2

commit f0bdf68d3fb6db1dd2b83e07062e2104cdb785c2
Author: Andrew Burgess <aburgess@redhat.com>
Date:   Fri Dec 16 15:15:42 2022 +0000

    gdb/c++: fix handling of breakpoints on @plt symbols
    
    This commit should fix PR gdb/20091, PR gdb/17201, and PR gdb/17071.
    Additionally, PR gdb/17199 relates to this area of code, but is more
    of a request to refactor some parts of GDB, this commit does not
    address that request, but it is probably worth reading that PR when
    looking at this commit.
    
    When the current language is C++, and the user places a breakpoint on
    a function in a shared library, GDB will currently find two locations
    for the breakpoint, one location will be within the function itself as
    we would expect, but the other location will be within the PLT table
    for the call to the named function.  Consider this session:
    
      $ gdb -q /tmp/breakpoint-shlib-func
      Reading symbols from /tmp/breakpoint-shlib-func...
      (gdb) start
      Temporary breakpoint 1 at 0x40112e: file /tmp/breakpoint-shlib-func.cc, line 20.
      Starting program: /tmp/breakpoint-shlib-func
    
      Temporary breakpoint 1, main () at /tmp/breakpoint-shlib-func.cc:20
      20      int answer = foo ();
      (gdb) break foo
      Breakpoint 2 at 0x401030 (2 locations)
      (gdb) info breakpoints
      Num     Type           Disp Enb Address            What
      2       breakpoint     keep y   <MULTIPLE>
      2.1                         y   0x0000000000401030 <foo()@plt>
      2.2                         y   0x00007ffff7fc50fd in foo() at /tmp/breakpoint-shlib-func-lib.cc:20
    
    This is not the expected behaviour.  If we compile the same test using
    a C compiler then we see this:
    
      (gdb) break foo
      Breakpoint 2 at 0x7ffff7fc50fd: file /tmp/breakpoint-shlib-func-c-lib.c, line 20.
      (gdb) info breakpoints
      Num     Type           Disp Enb Address            What
      2       breakpoint     keep y   0x00007ffff7fc50fd in foo at /tmp/breakpoint-shlib-func-c-lib.c:20
    
    Here's what's happening.  When GDB parses the symbols in the main
    executable and the shared library we see a number of different symbols
    for foo, and use these to create entries in GDB's msymbol table:
    
      - In the main executable we see a symbol 'foo@plt' that points at
        the plt entry for foo, from this we add two entries into GDB's
        msymbol table, one called 'foo@plt' which points at the plt entry
        and has type mst_text, then we create a second symbol, this time
        called 'foo' with type mst_solib_trampoline which also points at
        the plt entry,
    
      - Then, when the shared library is loaded we see another symbol
        called 'foo', this one points at the actual implementation in the
        shared library.  This time GDB creates a msymbol called 'foo' with
        type mst_text that points at the implementation.
    
    This means that GDB creates 3 msymbols to represent the 2 symbols
    found in the executable and shared library.
    
    When the user creates a breakpoint on 'foo' GDB eventually ends up in
    search_minsyms_for_name (linespec.c), this function then calls
    iterate_over_minimal_symbols passing in the name we are looking for
    wrapped in a lookup_name_info object.
    
    In iterate_over_minimal_symbols we iterate over two hash tables (using
    the name we're looking for as the hash key), first we walk the hash
    table of symbol linkage names, then we walk the hash table of
    demangled symbol names.
    
    When the language is C++ the symbols for 'foo' will all have been
    mangled, as a result, in this case, the iteration of the linkage name
    hash table will find no matching results.
    
    However, when we walk the demangled hash table we do find some
    results.  In order to match symbol names, GDB obtains a symbol name
    matching function by calling the get_symbol_name_matcher method on the
    language_defn class.  For C++, in this case, the matching function we
    use is cp_fq_symbol_name_matches, which delegates the work to
    strncmp_iw_with_mode with mode strncmp_iw_mode::MATCH_PARAMS and
    language set to language_cplus.
    
    The strncmp_iw_mode::MATCH_PARAMS mode means that strncmp_iw_mode will
    skip any parameters in the demangled symbol name when checking for a
    match, e.g. 'foo' will match the demangled name 'foo()'.  The way this
    is done is that the strings are matched character by character, but,
    once the string we are looking for ('foo' here) is exhausted, if we
    are looking at '(' then we consider the match a success.
    
    Lets consider the 3 symbols GDB created.  If the function declaration
    is 'void foo ()' then from the main executable we added symbols
    '_Z3foov@plt' and '_Z3foov', while from the shared library we added
    another symbol call '_Z3foov'.  When these are demangled they become
    'foo()@plt', 'foo()', and 'foo()' respectively.
    
    Now, the '_Z3foov' symbol from the main executable has the type
    mst_solib_trampoline, and in search_minsyms_for_name, we search for
    any symbols of type mst_solib_trampoline and filter these out of the
    results.
    
    However, the '_Z3foov@plt' symbol (from the main executable), and the
    '_Z3foov' symbol (from the shared library) both have type mst_text.
    
    During the demangled name matching, due to the use of MATCH_PARAMS
    mode, we stop the comparison as soon as we hit a '(' in the demangled
    name.  And so, '_Z3foov@plt', which demangles to 'foo()@plt' matches
    'foo', and '_Z3foov', which demangles to 'foo()' also matches 'foo'.
    
    By contrast, for C, there are no demangled hash table entries to be
    iterated over (in iterate_over_minimal_symbols), we only consider the
    linkage name symbols which are 'foo@plt' and 'foo'.  The plain 'foo'
    symbol obviously matches when we are looking for 'foo', but in this
    case the 'foo@plt' will not match due to the '@plt' suffix.
    
    And so, when the user asks for a breakpoint in 'foo', and the language
    is C, search_minsyms_for_name, returns a single msymbol, the mst_text
    symbol for foo in the shared library, while, when the language is C++,
    we get two results, '_Z3foov' for the shared library function, and
    '_Z3foov@plt' for the plt entry in the main executable.
    
    I propose to fix this in strncmp_iw_with_mode.  When the mode is
    MATCH_PARAMS, instead of stopping at a '(' and assuming the match is a
    success, GDB will instead search forward for the matching, closing,
    ')', effectively skipping the parameter list, and then resume
    matching.  Thus, when comparing 'foo' to 'foo()@plt' GDB will
    effectively compare against 'foo@plt' (skipping the parameter list),
    and the match will fail, just as it does when the language is C.
    
    There is one slight complication, which is revealed by the test
    gdb.linespec/cpcompletion.exp, when searching for the symbol of a
    const member function, the demangled symbol will have 'const' at the
    end of its name, e.g.:
    
      struct_with_const_overload::const_overload_fn() const
    
    Previously, the matching would stop at the '(' character, but after my
    change the whole '()' is skipped, and the match resumes.  As a result,
    the 'const' modifier results in a failure to match, when previously
    GDB would have found a match.
    
    To work around this issue, in strncmp_iw_with_mode, when mode is
    MATCH_PARAMS, after skipping the parameter list, if the next character
    is '@' then we assume we are looking at something like '@plt' and
    return a value indicating the match failed, otherwise, we return a
    value indicating the match succeeded, this allows things like 'const'
    to be skipped.
    
    With these changes in place I now see GDB correctly setting a
    breakpoint only at the implementation of 'foo' in the shared library.
    
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=20091
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=17201
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=17071
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=17199
    
    Tested-By: Bruno Larsen <blarsen@redhat.com>
    Approved-By: Simon Marchi <simon.marchi@efficios.com>
Comment 4 Andrew Burgess 2023-02-12 06:24:08 UTC
This should now be fixed.  Feel free to reopen if this is still an issue.