Add parameter to disable breakpoints for plt functions

PR c++/20091